<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:text="@string/item"
            android:textStyle="bold"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:text="@string/qtde"
            android:textStyle="bold"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:text="@string/un"
            android:textStyle="bold"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:text="@string/price"
            android:textStyle="bold"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:text="@string/total"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d4d4d4"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_catalog_cart_items_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:minHeight="200dp"
        tools:listitem="@layout/activity_catalog_cart_items_row" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:background="@color/colorGreyDark"
            android:layout_marginEnd="1dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:gravity="center_vertical|start"
                android:text="@string/subtotal"
                android:textColor="@color/colorAccent"
                android:layout_margin="5dp"
                android:layout_height="20dp"
                android:layout_width="match_parent"/>

            <TextView
                android:id="@+id/activity_catalog_cart_subtotal"
                android:gravity="center_vertical|center_horizontal"
                android:text="R$ 0,00"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorGreyDark"
            android:layout_marginEnd="1dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:gravity="center_vertical|start"
                android:text="@string/additions"
                android:textColor="@color/colorAccent"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/activity_catalog_cart_additions"
                android:gravity="center_vertical|center_horizontal"
                android:text="R$ 0,00"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorGreyDark"
            android:layout_marginEnd="1dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:gravity="center_vertical|start"
                android:text="@string/discounts"
                android:textColor="@color/colorAccent"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/activity_catalog_cart_discounts"
                android:gravity="center_vertical|center_horizontal"
                android:text="R$ 0,00"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="25dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:background="@color/colorGreyDark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:gravity="center_vertical|start"
                android:text="@string/total"
                android:textColor="@color/colorAccent"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/activity_catalog_cart_total"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/colorAccent"
                android:text="R$ 0,00"
                android:layout_marginBottom="25dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>