<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17"
        android:gravity="center|left|center"
        android:text="@string/company_register"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_account_company_denomination_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_denomination"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_account_company_fancyname_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_fancyname"
                android:imeOptions="actionGo"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>