<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
        android:gravity="center|left|center"
        android:text="@string/welcome_company"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/activity_account_company_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/account_company_radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/activity_account_new_company_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:checked="true"
                android:duplicateParentState="false"
                android:text="@string/welcome_option03" />

            <RadioButton
                android:id="@+id/activity_account_use_company_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:text="@string/welcome_option04"/>

        </RadioGroup>

        <Spinner
            android:id="@+id/activity_account_use_company_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:minHeight="178dp"
            android:minWidth="50dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</LinearLayout>