<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/activity_catalog_cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/shopping_cart"
        android:paddingBottom="10dp"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"/>

    <br.com.pocketpos.app.widget.HeightWrappingViewPager
        android:id="@+id/activity_catalog_cart_viewpager"
        android:layout_below="@id/activity_catalog_cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/activity_catalog_cart_divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/activity_catalog_cart_viewpager"
        android:background="#d4d4d4"/>

    <RelativeLayout
        android:id="@+id/activity_catalog_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/activity_catalog_cart_divider"
        android:orientation="horizontal"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/activity_catalog_cart_layout_dots"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/activity_catalog_cart_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/next"/>

        <Button
            android:id="@+id/activity_catalog_cart_prev_button"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/preview"/>

    </RelativeLayout>

</RelativeLayout>